--- a/ai_Dish_Production/.project
+++ b/ai_Dish_Production/.project
@@ -5,7 +5,13 @@
 	<projects>
 	</projects>
 	<buildSpec>
+		<buildCommand>
+			<name>com.spirent.itest.security.assets.ui.SignatureVerificationBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>com.spirent.itest.security.assets.ui.SecurityNature</nature>
 	</natures>
 </projectDescription>
